--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% @students.each do |student| %>
-    <div><%= student.first_name + " " + student.last_name %></div>
+  <% @students.each do |student| %> <!-- iterating through each student -->
+    <div><%= student.first_name + " " + student.last_name %></div> <!-- present student first_name and last_name -->
   <% end %>
 </div>
