--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,1 @@
-<h1><%= @student.to_s %></h1>
+<h1><%= @student.to_s %></h1> <!-- use the instance variable created and call the method from model class 'Student' -->
